fix main apge mobile overflow

--- a/css/index.css
+++ b/css/index.css
@@ -72,7 +72,7 @@
             top: 0;
             left: 0;
             height: 100%;
-            width: 100%;
+            width: 100vw;
             background: linear-gradient(to top, rgba(0,0,0) 0%, rgba(0,0,0,0.5) 40%);
             z-index: -1;
         }
@@ -424,6 +424,7 @@ section.video-section {
     .bg-svg-container {
         width: 100vw;
         height: fit-content;
+        min-height: 350vh;
         position: absolute;
         left: 0;
         top: 0;
